SERVER-55774 Fix Coverity analysis defect 118027